--- a/public/style.css
+++ b/public/style.css
@@ -4,10 +4,9 @@
   box-sizing: border-box;
 }
 .search-login {
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: right;
   gap: 700px;
-  padding: 2rem;
+  padding: 10px;
 }
 
 .search-bar {
@@ -18,22 +17,21 @@
 }
 
 .search-bar input[type="text"] {
-  width: 200px;
+  width: 700px;
   padding: 0.5rem;
   border: none;
   border-radius: 6px;
   outline: none;
-  font-size: 0.9rem;
+
 }
 
 .search-bar button {
-  padding: 0.5rem 1rem;
+  padding: 10px 20px;
   margin-left: 0.5rem;
   background: #ff0066;
   color: #fff;
   border: none;
   border-radius: 6px;
-  font-size: 0.9rem;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -44,21 +42,20 @@
 
 .login-form {
   background: #1c1c1c;
-  padding: 1rem;
+  padding: 2px;
   border-radius: 6px;
   text-align: right;
   
 }
 
 .login-form input {
-    text-align: right;
+  text-align: left;
   display: block;
   width: 200px;
-  margin: 0.4rem auto;
-  padding: 0.5rem;
+  padding: 10px;
   border: none;
+  margin-left: 10px;
   border-radius: 5px;
-  font-size: 0.9rem;
   outline: none;
 }
 
@@ -69,7 +66,6 @@
   color: #fff;
   border: none;
   border-radius: 5px;
-  font-size: 0.9rem;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -142,11 +138,11 @@ nav a:hover {
   border-radius: 8px;
 }
 .textosobre {
-    width: 300px; /* Define a largura da caixa */
-    height: 400px; /* Define a altura da caixa */
-    border: 5px solid hsl(0, 28%, 39%); /* Para visualizar a caixa */
-    overflow: auto; /* Adiciona barras de rolagem (vertical e horizontal) se o conteúdo for maior */
-    padding: 10px; /* Adiciona um espaçamento interno */
+    width: 300px;
+    height: 400px; 
+    border: 5px solid hsl(0, 28%, 39%); 
+    overflow: auto; 
+    padding: 10px;
   flex: 1;
 }
 .textosobre h2 {
