--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,7 @@
   border: none;
   border-radius: 6px;
   outline: none;
+  text-align: right;
 
 }
 
@@ -44,7 +45,7 @@
   background: #1c1c1c;
   padding: 2px;
   border-radius: 6px;
-  text-align: right;
+  text-align: left;
   
 }
 
@@ -61,7 +62,8 @@
 
 .login-form button {
   width: 200px;
-  padding: 0.5rem;
+  padding: 10px;
+  margin-left: 10px;
   background: #ff0066;
   color: #fff;
   border: none;
