--- a/public/style.css
+++ b/public/style.css
@@ -193,6 +193,10 @@ footer {
   text-align: center;
   padding: 1.5rem;
   margin-top: 2rem;
+  margin: 10px;
+  color: #f5f5f5;
+  text-decoration: none;
+  transition: 0.3s;
 }
 .social img{
   width: 1%;
